# MockORM

./: CMakeLists.txt  LICENSE  README.md
headers/: AbsDatabase.h  Queries.h
src/: AbsDatabase.cpp  Example.cpp  Queries.cpp
